tests/invalid/missing_first_rel_op.c
int main() {
    return <= 2;
}
// ERROR: Line 2, Error 2009